	* Incremented the library ABI version to 16:0:1.
	* Incremented the package version to 0.20.0.
2020-03-25 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'SyLwrpClient' that could cause emission of the
	'SyLwrpClient::connected()' signal to be suppressed after reception
	of a socket error.
2020-03-25 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library ABI version to 16:1:1.
	* Incremented the package version to 0.20.1.
2020-05-05 Fred Gleason <fredg@paravelsystems.com>
	* Added 'SyNode::productName()' and 'SyNode::setProductName()'
	methods.
	* Added an 'SyLwrpClient::productName()' method.
2020-05-07 Fred Gleason <fredg@paravelsystems.com>
	* Added more device signatures to 'SyNode::productName()'.
2020-05-07 Fred Gleason <fredg@paravelsystems.com>
	* Updated 'SyNode::productName()' to include the DEVN string
	when reporting unrecognized devices.
2020-05-07 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a type in 'sy/synode.cpp'.
2020-05-28 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library ABI version to 17:0:2.
	* Incremented the package version to 0.21.0.
2020-06-11 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in the RPM packaging that failed to enforce version
	consistency between the base and '-devel' packages.
2020-06-11 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.21.1.
2020-11-11 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in the 'SyLwrpClient::setGpoSourceAddress()' method
	that broke operation for GPIO endpoints.
2020-11-11 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library ABI version to 17:1:2.
	* Incremented the package version to 0.21.2.
2021-07-19 Fred Gleason <fredg@paravelsystems.com>
	* Modified the 'make rpm' target to generate the RPM datestamp
	automatically.
2024-09-27 Fred Gleason <fredg@paravelsystems.com>
	* Added an '--iface-address=' switch to the sygpiotest() test
	command.