@@ -712,3 +712,5 @@
 2024-09-27 Fred Gleason <fredg@paravelsystems.com>
 	* Added an '--iface-address=' switch to the sygpiotest() test
 	command.
+2024-09-27 Fred Gleason <fredg@paravelsystems.com>
+	* Added a 'SyGpioEvent::gpioTypeString()' static method.
